Improve: Shift mode

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
       </div>
     </header>
     <fieldset id="medias">
-      <legend>
-        Medias
-        <span class="shift" style="color: red">*Delete Mode</span>
-      </legend>
+      <legend>Medias (Press Shift to Delete Mode)</legend>
       <input
         style="display: none"
         type="file"
