--- a/index.html
+++ b/index.html
@@ -181,14 +181,68 @@
             <div class="add-item-btn">+</div>
           </div>
         </div>
-        <label>
-          <input
-            type="checkbox"
-            id="displayLogo"
-            oninput="sendToProjectionWindow()"
-          />
-          Display Logo
-        </label>
+        <div class="inputs">
+          <label>
+            <input
+              type="checkbox"
+              id="displayLogo"
+              oninput="sendToProjectionWindow()"
+            />
+            Display Logo
+          </label>
+          <div>
+            <span class="key">Size</span>
+            <input
+              class="val"
+              id="logo-size"
+              type="range"
+              min="0.1"
+              max="1"
+              step="0.01"
+              value="0.3"
+              oninput="sendToProjectionWindow()"
+            />
+          </div>
+          <div>
+            <span class="key">Pos:X</span>
+            <input
+              class="val"
+              id="logo-pos-x"
+              type="range"
+              min="0"
+              max="1"
+              step="0.01"
+              value="0.5"
+              oninput="sendToProjectionWindow()"
+            />
+          </div>
+          <div>
+            <span class="key">Pos:Y</span>
+            <input
+              class="val"
+              id="logo-pos-y"
+              type="range"
+              min="0"
+              max="1"
+              step="0.01"
+              value="0.7"
+              oninput="sendToProjectionWindow()"
+            />
+          </div>
+          <div>
+            <span class="key">Opacity</span>
+            <input
+              class="val"
+              id="logo-opacity"
+              type="range"
+              min="0"
+              max="1"
+              step="0.01"
+              value="1"
+              oninput="sendToProjectionWindow()"
+            />
+          </div>
+        </div>
       </fieldset>
     </div>
 
