Update: add flash effect

--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
             />
             Shuffle Media
           </label>
+          <label for="flash">
+            <input
+              type="checkbox"
+              id="flash"
+              oninput="sendToProjectionWindow()"
+            />
+            flash
+          </label>
           <label style="display: none">
             <input
               type="checkbox"
