--- a/projection.html
+++ b/projection.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="media"></div>
+    <div id="flash"></div>
 
     <!-- ロゴ表示用 -->
     <img id="logoElement" src="" alt="Logo Display" />
