Feature: add random positioning for logo

--- a/projection.html
+++ b/projection.html
@@ -12,7 +12,7 @@
     <div id="flash"></div>
 
     <!-- ロゴ表示用 -->
-    <img id="logoElement" src="" alt="Logo Display" />
+    <div id="logo-layer"></div>
 
     <!-- テキスト表示用 -->
     <div id="displayText"></div>
