--- a/index.html
+++ b/index.html
@@ -247,6 +247,27 @@
             />
           </div>
           <div>
+            <span class="key">Opacity</span>
+            <input
+              class="val"
+              id="logo-opacity"
+              type="range"
+              min="0"
+              max="1"
+              step="0.01"
+              value="1"
+              oninput="sendToProjectionWindow()"
+            />
+          </div>
+          <label>
+            <input
+              type="checkbox"
+              id="logo-random-position"
+              oninput="sendToProjectionWindow()"
+            />
+            Random Position
+          </label>
+          <div class="logo-fixed-position">
             <span class="key">Pos:X</span>
             <input
               class="val"
@@ -259,7 +280,7 @@
               oninput="sendToProjectionWindow()"
             />
           </div>
-          <div>
+          <div class="logo-fixed-position">
             <span class="key">Pos:Y</span>
             <input
               class="val"
@@ -272,15 +293,28 @@
               oninput="sendToProjectionWindow()"
             />
           </div>
-          <div>
-            <span class="key">Opacity</span>
+          <div class="logo-random-position hidden">
+            <span class="key">Freq(s)</span>
             <input
               class="val"
-              id="logo-opacity"
-              type="range"
-              min="0"
-              max="1"
-              step="0.01"
+              id="logo-random-freq"
+              type="number"
+              min="0.1"
+              max="5"
+              step="0.1"
+              value="0.5"
+              oninput="sendToProjectionWindow()"
+            />
+          </div>
+          <div class="logo-random-position hidden">
+            <span class="key">Count</span>
+            <input
+              class="val"
+              id="logo-random-count"
+              type="number"
+              min="1"
+              max="20"
+              step="1"
               value="1"
               oninput="sendToProjectionWindow()"
             />
