--- a/index.html
+++ b/index.html
@@ -3,326 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>settings</title>
-    <link rel="stylesheet" href="./style/index.css" />
+    <title>Projection</title>
+    <link rel="stylesheet" href="style/projection.css" />
     <script src="./script/common.js"></script>
   </head>
   <body>
-    <header>
-      <h1>VJ Settings</h1>
-      <div id="header_button">
-        <button id="openProjection">Open Projection Window</button>
-        <button id="resetEffects">Reset Effects</button>
-      </div>
-    </header>
-    <fieldset id="medias">
-      <legend>Medias (Press Shift to Delete Mode)</legend>
-      <input
-        style="display: none"
-        type="file"
-        id="media"
-        accept="image/gif, image/png, image/jpeg, video/mp4"
-        multiple
-      />
+    <div id="media"></div>
+    <div id="flash"></div>
 
-      <div id="add-media" class="item add-item-btn">+</div>
-    </fieldset>
-    <div id="config">
-      <fieldset>
-        <legend>Center Text</legend>
-        <div class="inputs">
-          <div>
-            <span class="key">Text</span>
-            <input
-              class="val"
-              type="text"
-              id="text"
-              placeholder="Enter text to display"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div>
-            <span class="key">Font</span>
-            <input
-              class="val"
-              id="font"
-              type="text"
-              value="sans-serif"
-              list="font_list"
-              oninput="sendToProjectionWindow()"
-            />
-            <datalist id="font_list">
-              <option value="serif"></option>
-              <option value="sans-serif"></option>
-              <option value="cursive"></option>
-              <option value="fantasy"></option>
-              <option value="monospace"></option>
-            </datalist>
-          </div>
-          <div>
-            <span class="key">Size</span>
-            <input
-              class="val"
-              id="font-size"
-              type="number"
-              value="24"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div>
-            <span class="key">TextColor</span>
-            <input
-              class="val"
-              id="font-color"
-              type="color"
-              value="#ffffff"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div>
-            <span class="key">BackColor</span>
-            <div class="val">
-              <input
-                id="back-color"
-                type="color"
-                oninput="sendToProjectionWindow()"
-              />
-              <input
-                id="back-opacity"
-                type="range"
-                min="0"
-                max="255"
-                value="0"
-                oninput="sendToProjectionWindow()"
-              />
-            </div>
-          </div>
-        </div>
-      </fieldset>
+    <!-- ロゴ表示用 -->
+    <div id="logo-layer"></div>
 
-      <fieldset>
-        <legend>Media Effect</legend>
-        <div class="inputs">
-          <div>
-            <span class="key">BG Color</span>
-            <input
-              class="val"
-              id="background-color"
-              type="color"
-              value="#000000"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div>
-            <span class="key">Effect</span>
-            <select
-              class="val"
-              id="screenEffect"
-              onchange="sendToProjectionWindow()"
-            >
-              <option value="none">None</option>
-              <option value="single">Single</option>
-              <option value="continuous">Tile</option>
-            </select>
-          </div>
-          <div>
-            <span class="key">Display</span>
-            <select
-              class="val"
-              id="media-display"
-              onchange="sendToProjectionWindow()"
-            >
-              <option value="cover">Cover</option>
-              <option value="contain">Contain</option>
-            </select>
-          </div>
-          <div class="media-effect-tile hidden">
-            <span class="key">Tile Count</span>
-            <input
-              class="val"
-              id="tile-count"
-              type="number"
-              min="2"
-              max="6"
-              value="6"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div class="media-effect-tile hidden">
-            <span class="key">Aspect</span>
-            <select
-              class="val"
-              id="aspectRatio"
-              onchange="sendToProjectionWindow()"
-            >
-              <option value="1:1">1:1</option>
-              <option value="4:3">4:3</option>
-              <option value="16:9">16:9</option>
-            </select>
-          </div>
-          <label>
-            <input type="checkbox" id="invertColor" />
-            Invert Color
-          </label>
-        </div>
-      </fieldset>
+    <!-- テキスト表示用 -->
+    <div id="displayText"></div>
 
-      <fieldset>
-        <legend>BPM Sync Effect</legend>
-        <div class="inputs">
-          <div>
-            <span class="key">BPM</span>
-            <div class="val grid-ls">
-              <input
-                type="number"
-                id="randomBpm"
-                value="120"
-                min="60"
-                max="300"
-                oninput="sendToProjectionWindow()"
-              />
-              <button id="measure-bpm" onclick="measureBPM()">M</button>
-            </div>
-          </div>
-          <label for="shuffle">
-            <input
-              type="checkbox"
-              id="shuffle"
-              oninput="sendToProjectionWindow()"
-            />
-            Shuffle Media
-          </label>
-          <label for="flash">
-            <input
-              type="checkbox"
-              id="flash"
-              oninput="sendToProjectionWindow()"
-            />
-            flash
-          </label>
-          <label style="display: none">
-            <input
-              type="checkbox"
-              id="invertColorWithBPM"
-              oninput="sendToProjectionWindow()"
-            />
-            Invert Color with BPM
-          </label>
-        </div>
-      </fieldset>
-
-      <fieldset id="logoDroparea">
-        <legend>Logo</legend>
-        <input
-          style="display: none"
-          type="file"
-          id="logo"
-          accept="image/gif, image/png, image/jpeg"
-        />
-        <div style="text-align: center">
-          <div id="logoPreview">
-            <div class="add-item-btn">+</div>
-          </div>
-        </div>
-        <div class="inputs">
-          <label>
-            <input
-              type="checkbox"
-              id="displayLogo"
-              oninput="sendToProjectionWindow()"
-            />
-            Display Logo
-          </label>
-          <div>
-            <span class="key">Size</span>
-            <input
-              class="val"
-              id="logo-size"
-              type="range"
-              min="0.1"
-              max="1"
-              step="0.01"
-              value="0.3"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div>
-            <span class="key">Opacity</span>
-            <input
-              class="val"
-              id="logo-opacity"
-              type="range"
-              min="0"
-              max="1"
-              step="0.01"
-              value="1"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <label>
-            <input
-              type="checkbox"
-              id="logo-random-position"
-              oninput="sendToProjectionWindow()"
-            />
-            Random Position
-          </label>
-          <div class="logo-fixed-position">
-            <span class="key">Pos:X</span>
-            <input
-              class="val"
-              id="logo-pos-x"
-              type="range"
-              min="0"
-              max="1"
-              step="0.01"
-              value="0.5"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div class="logo-fixed-position">
-            <span class="key">Pos:Y</span>
-            <input
-              class="val"
-              id="logo-pos-y"
-              type="range"
-              min="0"
-              max="1"
-              step="0.01"
-              value="0.7"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div class="logo-random-position hidden">
-            <span class="key">Freq(s)</span>
-            <input
-              class="val"
-              id="logo-random-freq"
-              type="number"
-              min="0.1"
-              max="5"
-              step="0.1"
-              value="0.5"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-          <div class="logo-random-position hidden">
-            <span class="key">Count</span>
-            <input
-              class="val"
-              id="logo-random-count"
-              type="number"
-              min="1"
-              max="20"
-              step="1"
-              value="1"
-              oninput="sendToProjectionWindow()"
-            />
-          </div>
-        </div>
-      </fieldset>
-    </div>
-
-    <script src="./script/index.js"></script>
+    <script src="./script/projection.js"></script>
   </body>
 </html>
