--- a/projection.html
+++ b/projection.html
@@ -2,21 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projection</title>
-    <link rel="stylesheet" href="style/projection.css" />
-    <script src="./script/common.js"></script>
+    <title>VJdesu Projection</title>
+    <link rel="stylesheet" href="./style/projection.css" />
+    <script type="module" src="./script/projection.js"></script>
   </head>
   <body>
-    <div id="media"></div>
-    <div id="flash"></div>
-
-    <!-- ロゴ表示用 -->
+    <div id="media-layer"></div>
+    <div id="text-layer"></div>
     <div id="logo-layer"></div>
-
-    <!-- テキスト表示用 -->
-    <div id="displayText"></div>
-
-    <script src="./script/projection.js"></script>
+    <div id="flash"></div>
   </body>
 </html>
